--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* HEADER EDITS BELOW */
+
 h1 {
     background-color: black;
     padding: 10px;
@@ -17,6 +19,8 @@ h3  {
     text-align: center;
     color: hotpink;
 }
+
+/* Text Info Styles Below */
 
 p  {
     text-align:center;
@@ -41,8 +45,10 @@ ol {
 
 footer {
     text-align: center;
-    background-color: red;
+    background-color: black;
 }
+
+/* Link Rollovers*/
 
 a:link    { color: blue;  }
 a:visited { color: red;   }
